# ClickUpAgent

./: .gitignore  main.py  pyproject.toml
docs/: SPEC.md
src/agent/: graph.py
src/agent/nodes/: llm_node.py  tools_node.py
src/api/: routes.py
src/config/: environment.py
src/tools/: click_up.py
